--- a/app/src/main/res/layout/fragment_pokemon_list.xml
+++ b/app/src/main/res/layout/fragment_pokemon_list.xml
@@ -8,7 +8,7 @@
 
         <variable
             name="viewModel"
-            type="com.example.pokemonapp.ui.PokemonViewModel" />
+            type="com.example.pokemonapp.ui.list.ListViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -23,8 +23,10 @@
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:listData="@{viewModel.pokemons}"
+
             tools:listitem="@layout/list_view_item" />
+<!--app:listData="@{viewModel.pokemons}"-->
+
 
         <ImageView
             android:id="@+id/status_image"
