--- a/app/src/main/res/layout/list_view_item.xml
+++ b/app/src/main/res/layout/list_view_item.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="pokemon"
-            type="com.example.pokemonapp.network.Pokemon" />
+            type="com.example.pokemonapp.repositories.PokemonListItem" />
         <variable
             name="clickListener"
             type="com.example.pokemonapp.ui.PokemonListener" />
