--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,15 +7,21 @@
 
     <fragment
         android:id="@+id/pokemonListFragment"
-        android:name="com.example.pokemonapp.ui.PokemonListFragment"
+        android:name="com.example.pokemonapp.ui.list.PokemonListFragment"
         android:label="PokemonListFragment" >
         <action
             android:id="@+id/action_pokemonListFragment_to_pokemonDetailFragment"
             app:destination="@id/pokemonDetailFragment" />
     </fragment>
+
     <fragment
         android:id="@+id/pokemonDetailFragment"
-        android:name="com.example.pokemonapp.ui.PokemonDetailFragment"
+        android:name="com.example.pokemonapp.ui.detail.PokemonDetailFragment"
         android:label="fragment_pokemon_detail"
-        tools:layout="@layout/fragment_pokemon_detail" />
+        tools:layout="@layout/fragment_pokemon_detail">
+        <argument
+            android:name="pokemonName"
+            app:argType="string"/>
+    </fragment>
+
 </navigation>
