--- a/app/src/main/res/layout/fragment_pokemon_detail.xml
+++ b/app/src/main/res/layout/fragment_pokemon_detail.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
         <variable
             name="viewModel"
             type="com.example.pokemonapp.ui.detail.DetailViewModel" />
@@ -29,10 +28,10 @@
                 android:id="@+id/name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@{viewModel.pokemon.name}"
                 android:textSize="25sp"
                 app:layout_constraintStart_toStartOf="parent"
                 tools:text="Bulbasaur" />
+<!--            android:text="@{viewModel.pokemon.name}"-->
 
         </androidx.appcompat.widget.Toolbar>
 
@@ -45,59 +44,54 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/toolbar" />
 
+        <ImageView
+            android:id="@+id/image"
+            android:layout_width="300dp"
+            android:layout_height="300dp"
+
+            android:padding="8dp"
+
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+
         <TextView
             android:id="@+id/types"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="8dp"
-            android:text="@{viewModel.pokemon.types[0].type.name.toString()}"
+
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/toolbar"
+            app:layout_constraintTop_toBottomOf="@id/image"
             tools:text="Types" />
-
+<!--        android:text="@{viewModel.pokemon.types[0].type.name.toString()}"-->
 
         <TextView
             android:id="@+id/weight"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="8dp"
-            android:text="@{Integer.toString(viewModel.pokemon.weight)}"
+
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/types"
             tools:text="Weight" />
+<!--        android:text="@{Integer.toString(viewModel.pokemon.weight)}"-->
 
         <TextView
             android:id="@+id/height"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="8dp"
-            android:text="@{Integer.toString(viewModel.pokemon.height)}"
+
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/weight"
             tools:text="Height" />
+<!--        android:text="@{Integer.toString(viewModel.pokemon.height)}"-->
 
 
-        <TextView
-            android:id="@+id/img_url"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="8dp"
-            android:text="@{viewModel.pokemon.sprites.front_default.toString()}"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/height"
-            tools:text="Img url" />
-
-        <ImageView
-            android:id="@+id/image"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            android:padding="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/img_url"/>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
