--- a/app/src/main/res/layout/list_view_item.xml
+++ b/app/src/main/res/layout/list_view_item.xml
@@ -20,7 +20,7 @@
         app:cardElevation="4dp"
         app:cardCornerRadius="4dp">
 
-        <TextView
+        <com.google.android.material.textview.MaterialTextView
             android:id="@+id/amphibian_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
